--- a/src/component/Contact/Contact.scss
+++ b/src/component/Contact/Contact.scss
@@ -1,13 +1,8 @@
 @import '../scss/variable';
 
-.contents {
-  margin-bottom: 3rem;
-  font-size: 2rem;
-}
-
-.social_icon {
-  font-size: 3rem; 
-  margin: 2rem 1rem;
+.social-icon {
+  font-size: 5rem; 
+  margin: 2rem;
   color: white;
   opacity: 0.5;
 
