--- a/src/component/ModalNav/ModalNav.scss
+++ b/src/component/ModalNav/ModalNav.scss
@@ -1,6 +1,6 @@
 @import '../scss/variable';
 
-.modal_nav {
+.modal-nav {
 	height: $modalNavHeight;
 	width: 95%;
 	margin: 0 auto;
@@ -8,17 +8,16 @@
 	
 	.logo {
 		float: left;
-		height: 3rem;
+		font-size: 3rem;
+		line-height: 5rem;
 		position: absolute;
-		top: 50%;
-		margin-top: -1.5rem;
 	}
 
-	.close_link{
+	.close-link{
 		color: $light;
 		float: right;
-		font-size: 1.3rem;
-		line-height: 4rem;
+		font-size: 2rem;
+		line-height: 5rem;
 		padding-right: 1rem;
 		vertical-align: middle;
 		text-decoration: none;
@@ -31,7 +30,7 @@
 	}		
 }
 
-.close_icon {
+.close-icon {
 	vertical-align: middle;
 	margin-left: 0.3rem;
 	padding-bottom: 0.1rem;
