--- a/src/component/App/App.scss
+++ b/src/component/App/App.scss
@@ -6,7 +6,11 @@
 }
 
 .bg-gray {
-	background-color: #444;
+  background-color: #444;
+}
+
+.bg-dark {
+  background-color: $dark;
 }
 
 
@@ -15,18 +19,22 @@
   margin-top: 2rem;
 }
 
+.mb-5 {
+	margin-bottom: 5rem;
+}
+
 
 /** body wrapper */
 .container {
   width: 100vw;
-	height: calc(100vh - #{$modalNavHeight});
-	min-height: 30rem;
-	display: flex;
-	flex-direction: column;
-	max-width: 110rem;
-	margin: 0 auto;
-	padding: 0 3rem;
-	position: relative; 
+  height: 100vh;
+  min-height: 30rem;
+  display: flex;
+  flex-direction: column;
+  max-width: 110rem;
+  margin: 0 auto;
+  padding: 0 3rem;
+  position: relative;
 }
 
 .alignItemCenter {
@@ -53,13 +61,11 @@
 
 
 /** page switch animation */
-.slideIn-appear,
 .slideIn-enter {
 	transform: translateY(100%);
 	z-index: 1;
 }
 
-.slideIn-appear-active,
 .slideIn-enter.slideIn-enter-active {
 	transform: translateY(0);
 	transition: transform 500ms ease-out;
@@ -70,13 +76,11 @@
   transition: opacity 300ms ease-out;
 }
 
-.fadeIn-appear,
 .fadeIn-enter {
 	opacity: 0;
   z-index: 1;
 }
 
-.fadeIn-appear-active,
 .fadeIn-enter.fadeIn-enter-active {
 	opacity: 1;
   transition: opacity 500ms ease-out;
@@ -85,4 +89,34 @@
 .fadeIn-exit.fadeIn-exit-active {
 	opacity: 0;
   transition: opacity 300ms ease-in;
+}
+
+.slideInRight-enter {
+	transform: translateX(100%);
+	z-index: 1;
+}
+
+.slideInRight-enter.slideInRight-enter-active {
+	transform: translateX(0);
+	transition: transform 500ms ease-out;
+}
+
+.slideInRight-exit.slideInRight-exit-active {
+	transform: translateX(100%);
+  transition: opacity 500ms ease-out;
+}
+
+.slideInLeft-enter {
+	transform: translateX(0);
+	z-index: 1;
+}
+
+.slideInLeft-enter.slideInLeft-enter-active {
+	transform: translateX(100%);
+	transition: transform 500ms ease-out;
+}
+
+.slideInLeft-exit.slideInLeft-exit-active {
+	transform: translateX(0);
+  transition: opacity 300ms ease-out;
 }
