--- a/src/component/Home/Home.scss
+++ b/src/component/Home/Home.scss
@@ -9,12 +9,13 @@
   font-size: 14rem; 
   line-height: 5rem;
   margin-bottom: 0;
-  cursor: pointer;
+  cursor: default;
 }
 
 .linkWrapper {
   text-decoration: none;
   list-style-type: none;
+  text-align: right;
   top: 8rem;
 }
 
@@ -49,6 +50,7 @@
   }
   .linkWrapper {
     margin-top: 8rem;
+    text-align: center;
   }
   .links {
     font-size: 2.5rem;
@@ -57,10 +59,6 @@
 
 
 /** react motion */
-$colors: '#69D2E7', '#A7DBD8', '#E0E4CC', '#F38630', '#FA6900', '#FF4E50', '#F9D423';
-$key: random( length($colors) );
-$nth: nth( $colors, $key );
-
 .reactMotion {
   position: absolute;
   width: 100%;
@@ -68,10 +66,9 @@ $nth: nth( $colors, $key );
 }
 
 .reactMotionBall {
-  width: 50px;
-  height: 50px;
+  width: 5rem;
+  height: 5rem;
   border-radius: 99px;
   position: absolute;
-  border: 1px solid $tomato;
-
+  border: .2rem dotted $tomato;
 }
