--- a/src/component/ModalNav/ModalNav.scss
+++ b/src/component/ModalNav/ModalNav.scss
@@ -1,23 +1,25 @@
 @import '../scss/variable';
 
 .modal-nav {
-	height: $modalNavHeight;
-	width: 95%;
-	margin: 0 auto;
-	position: relative;
+  height: $modalNavHeight;
+  width: 100%;
+  margin: 0 auto;
+  position: fixed;
+  padding: 0 2.5%;
+  z-index: 10;
 	
 	.logo {
-		float: left;
-		font-size: 3rem;
-		line-height: 5rem;
-		position: absolute;
+    float: left;
+    font-size: 3rem;
+    line-height: $modalNavHeight;
+    position: absolute;
 	}
 
 	.close-link{
 		color: $light;
 		float: right;
 		font-size: 2rem;
-		line-height: 5rem;
+		line-height: $modalNavHeight;
 		padding-right: 1rem;
 		vertical-align: middle;
 		text-decoration: none;
@@ -33,5 +35,13 @@
 .close-icon {
 	vertical-align: middle;
 	margin-left: 0.3rem;
-	padding-bottom: 0.1rem;
+	margin-bottom: 0.3rem;
+}
+
+.backToSkills {
+  color: $light;
+  font-size: 2.5rem;
+  line-height: $modalNavHeight;
+  text-decoration: none;
+  cursor: pointer;
 }
