changed svg icon size in mobile screen

--- a/src/component/Skills/Skills.scss
+++ b/src/component/Skills/Skills.scss
@@ -399,10 +399,11 @@
     margin-top: 7rem;
     left: 5vw;
   }
-  .svgLogos {
-    width: 3rem;
-    height: 3rem;
-    height: 100%;
+  .svgIcon {
+    width: 4rem;
+  }
+  #muiIcon {
+    width: 3.5rem;
   }
 }
 
