--- a/src/component/scss/_variable.scss
+++ b/src/component/scss/_variable.scss
@@ -35,4 +35,5 @@ $modalNavHeight: 5rem;
 $portfolioImage: url(../../resources//projects/portfolio-topPage.png);
 $bjImage: url(../../resources/projects/bj-topPage.png);
 $scheduleImage: url(../../resources/projects/scheduler-topPage.png);
-$octcatImg: url(../../resources/projects/octcat.png);
+$vectorImage: url(../../resources/projects/marirobo.png);
+$octcatImage: url(../../resources/projects/octcat.png);
