--- a/src/component/Skills/Skills.scss
+++ b/src/component/Skills/Skills.scss
@@ -186,6 +186,7 @@
   top: 0;
   border: 1rem solid transparent;
   transform: translate(-50%, -100%);
+  border-bottom-color: black;
 }
 
 .tooltip:hover .tooltipText {
@@ -305,7 +306,61 @@
 }
 
 
+/** scroll arrow */
+.scrollArrow {
+  margin: 0 auto;
+  text-align: center;
+  -webkit-animation: scroll 2s infinite;
+  animation: scroll 2s infinite;
+
+  .icons {
+    font-size: 3rem;
+    margin: 0 auto;
+  }
+
+  p {
+    font-size: 1rem;
+    margin-top: -1rem;;
+  }
+}
+
+@-webkit-keyframes scroll {
+	0% { 
+		-webkit-transform: translate(0, 0); 
+		opacity: 0; 
+	}
+	50% { 
+		opacity: 1; 
+	}
+	100% {
+		-webkit-transform: translate(0, 0.8rem);
+		opacity: 0;
+	}
+}
+
+@keyframes scroll {
+	0% {
+		transform: translate(0, 0);
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		transform: translate(0, 0.8rem);
+		opacity: 0;
+	}
+}
+
+
 /** project */
+#myWorks {
+  span {
+    font-size: 1.5rem;
+    margin-left: 1rem;
+  }
+}
+
 .projects {
   display: flex;
   flex-wrap: wrap;
@@ -388,6 +443,27 @@
       opacity: 0;
     }
   }
+}
+
+.projectFooter {
+  font-size: 2rem;
+  text-decoration: none;
+  color: white;
+  margin-bottom: 2rem;
+}
+
+.arrowPrev {
+  position: absolute;
+  left: 2.5%;
+
+}
+.arrowNext {
+  position: absolute;
+  right: 2.5%;
+}
+
+.footerIcons {
+  margin: 0 1rem;
 }
 
 
