--- a/src/component/scss/_variable.scss
+++ b/src/component/scss/_variable.scss
@@ -34,6 +34,6 @@ $modalNavHeight: 5rem;
 /** images */
 $portfolioImage: url(../../resources//projects/portfolio-topPage.png);
 $bjImage: url(../../resources/projects/bj-topPage.png);
-$scheduleImage: url(../../resources/projects/scheduler-topPage.png);
+$scheduleImage: url(../../resources/projects/scheduler-topPage.jpg);
 $vectorImage: url(../../resources/projects/marirobo.png);
 $octcatImage: url(../../resources/projects/octcat.png);
