changed images size

--- a/src/component/scss/_variable.scss
+++ b/src/component/scss/_variable.scss
@@ -32,8 +32,8 @@ $modalNavHeight: 5rem;
 
 
 /** images */
-$portfolioImage: url(../../resources//projects/portfolio-topPage.png);
-$bjImage: url(../../resources/projects/bj-topPage.png);
-$scheduleImage: url(../../resources/projects/scheduler-topPage.jpg);
+$portfolioImage: url(../../resources//projects/portfolio-topPage-small.png);
+$bjImage: url(../../resources/projects/bj-topPage-small.png);
+$scheduleImage: url(../../resources/projects/scheduler-topPage-small.png);
 $vectorImage: url(../../resources/projects/marirobo.png);
 $octcatImage: url(../../resources/projects/octcat.png);
