--- a/src/component/Skills/Skills.scss
+++ b/src/component/Skills/Skills.scss
@@ -373,6 +373,11 @@
     background-size: 30rem 20rem;
   }
 
+  #eCommerceImg {
+    background-image: $eCommerceImage;
+    background-size: 30rem 20rem;
+  }
+
   #jsPortfolioImg {
     background-image: $portfolioImage;
     background-size: 30rem 20rem;
