--- a/src/component/scss/_variable.scss
+++ b/src/component/scss/_variable.scss
@@ -37,3 +37,4 @@ $bjImage: url(../../resources/projects/bj-topPage-small.png);
 $scheduleImage: url(../../resources/projects/scheduler-topPage-small.png);
 $vectorImage: url(../../resources/projects/marirobo.png);
 $octcatImage: url(../../resources/projects/octcat.png);
+$eCommerceImage: url(../../resources//projects//eCommerce-topPage-small.png);
