--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quantico|Share+Tech+Mono|Ravi+Prakash&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quantico|Share+Tech+Mono|Ravi+Prakash|Source+Code+Pro&display=swap');
 
 * {
   box-sizing: border-box;
